[package]
name = "agentropic-examples"
version = "0.1.0"
edition = "2021"
authors = ["Agentropic <agentropic@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Example applications demonstrating the Agentropic multi-agent framework"
repository = "https://github.com/agentropic/agentropic-examples"
keywords = ["agents", "multi-agent", "examples", "autonomous"]
publish = false

[dependencies]
agentropic-core = { git = "https://github.com/agentropic/agentropic-core", branch = "fixes-all-v3" }
agentropic-messaging = { git = "https://github.com/agentropic/agentropic-messaging", branch = "main" }
agentropic-cognition = { git = "https://github.com/agentropic/agentropic-cognition", branch = "main" }
agentropic-patterns = { git = "https://github.com/agentropic/agentropic-patterns", branch = "main" }
agentropic-runtime = { git = "https://github.com/agentropic/agentropic-runtime", branch = "docs/json" }
async-trait = "0.1"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }

[[example]]
name = "hello_agent"
path = "examples/hello_agent.rs"

[[example]]
name = "messaging"
path = "examples/messaging.rs"

[[example]]
name = "agents_talking"
path = "examples/agents_talking.rs"

[[example]]
name = "supervised_agents"
path = "examples/supervised_agents.rs"

[[example]]
name = "cognitive_agent"
path = "examples/cognitive_agent.rs"

[[example]]
name = "full_system"
path = "examples/full_system.rs"
